[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bollard = "0.11"
dotenv = "0.15"
futures = "0.3"
git2 = "0.13"
hex = "0.4"
hmac-sha256 = "0.1"
hyper = { version = "0.14", features = ["full"] }
json = "0.12"
lazy_static = "1.4"
serde = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
